--- a/style.css
+++ b/style.css
@@ -76,6 +76,10 @@ footer>div{
     height: 472px;
 }
 
+/* media queries */
+
+/* for mobile devices  */
+
 @media only screen and (max-width:768px){
     .carousel-item{
         height: 60vh;
@@ -103,11 +107,9 @@ footer>div{
     footer p{
         font-size: 14px;
     }
-    
-
 
 }
-
+ /* for tablet devices  */
 @media only screen and (min-width:769px) and (max-width:992px){
 
     .carousel-caption h1{
@@ -116,9 +118,6 @@ footer>div{
 
     footer>div{
         height: 332px;
-    }
-    .section-header{
-        font-size: 30px;
     }
     
 
