--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ footer>div{
     height: 472px;
 }
 
-/* media queries */
+/* media queries for overwrite bootstrap */
 
 /* for mobile devices  */
 
